tests/paczka1/small_fuzzy/59758719.err
Error in line 2: GPd S115 27,1
Error in line 3: 1qMU2m5 S98 59,7
Error in line 9: mgn2DC8iDIa S115 40,3
